Installation et configuration de _rest-passord

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=05d7ae3f490cf1aac32cebab441b3626
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+ MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
