--- a/config/packages/liip_imagine.yaml
+++ b/config/packages/liip_imagine.yaml
@@ -2,3 +2,10 @@
 liip_imagine:
     # valid drivers options include "gd" or "gmagick" or "imagick"
     driver: "gd"
+    filter_sets:
+        square:
+            quality: 75
+            filters:
+                thumbnail:
+                    size: [300, 300]
+                    mode: outbound
